...
                    padding: const EdgeInsets.fromLTRB(20, 10, 20, 20),
                    alignment: Alignment.centerLeft,
                    child: Column(
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        TextFormField(
                          key: const ValueKey("txtNoOfPeople"),
                          controller: _noOfPeopleEditingController,
                          keyboardType: TextInputType.number,
                          inputFormatters: [
                            FilteringTextInputFormatter.digitsOnly
                          ],
                          decoration: const InputDecoration(
...
                              return "Enter venue capacity";
                            }
                            return null;
                          },
                        ),
                        TextFormField(
                          key: const ValueKey("txtdate"),
                          controller: _timeEditingController,
                          decoration: const InputDecoration(
                            hintStyle: TextStyle(
                              fontSize: 14,
                              fontWeight: FontWeight.w500,
                              color: Color.fromARGB(255, 192, 192, 192),
...
                        ),
                        const SizedBox(
                          height: 10,
                        ),
                        Center(
                          child: InkWell(
                            key: const ValueKey("btnNext"),
                            onTap: () {
                              if (_globalKey.currentState!.validate()) {
                                setState(() {
                                  show = true;
                                });
                                // debugPrint("INDOOR value: $indoor");
...
